# static_queue

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conanfile.py  meson.build  requirements.txt  static_queue.code-workspace
.github/workflows/: documentation-links.yml  main.yml
docs/: codeindex.md  conf.py  index.md  index.rst  requirements.in  requirements.txt  static_queue.dox
include/static_queue/: return_code.h  ring_buffer.h  static_queue.h
src/: ring_buffer.c  static_queue.c
tests/: meson.build  test_ring_buffer.c  test_sanity.c  test_static_queue.c
